--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section></section>
+    <section>
+        <header>
+            <a href="#" class="logo"><img src="images/logo.png" alt=""></a>
+            <div class="toggle"></div>
+        </header>
+    </section>
 </body>
 </html>
