Added content to the page.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
             <a href="#" class="logo"><img src="images/logo.png" alt=""></a>
             <div class="toggle"></div>
         </header>
+        <div class="content">
+            <div class="imgBx">
+                <img src="images/shoe.png" alt="">
+            </div>
+            <div class="text">
+                <h2>Nike Aire Zoom</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusantium aliquam maxime possimus in nostrum beatae necessitatibus deleniti aut sequi.</p>
+                <a href="#">Details</a>
+            </div>
+        </div>
     </section>
 </body>
 </html>
