Added content for the social media icons.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                 <a href="#">Details</a>
             </div>
         </div>
+        <ul class="sci">
+            <li><a href="#"><img src="images/facebook.png" alt=""></a></li>
+            <li><a href="#"><img src="images/twitter.png" alt=""></a></li>
+            <li><a href="#"><img src="images/instagram.png" alt=""></a></li>
+        </ul>
     </section>
 </body>
 </html>
